@@ -1,60 +1,78 @@
-FROM ubuntu:22.04
+FROM ubuntu:24.04
 
-ENV LC_ALL C.UTF-8
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US.UTF-8
-
+# Build arguments
 ARG VERSION=NULL
 # program can be tws or ibgateway.
 ARG PROGRAM=ibgateway
-# release can be stable, latest, or beta; 
+# release can be stable, latest, or beta;
 ARG RELEASE=stable
 # arch can be x64 or x86.
 ARG ARCH=x64
+ARG IBC_VERSION=3.22.0
 
-ARG IBC_RELEASE=https://github.com/IbcAlpha/IBC/releases/download/3.21.2/IBCLinux-3.21.2.zip
+# Add metadata labels
+LABEL description="Interactive Brokers Gateway/TWS Docker Container" \
+      version="${VERSION}" \
+      program="${PROGRAM}" \
+      release="${RELEASE}" \
+      ibc.version="${IBC_VERSION}"
 
-ENV PROGRAM=${PROGRAM}
-ENV IB_RELEASE=${RELEASE}
+# Set locale and language environment variables
+ENV LC_ALL=C.UTF-8 \
+    LANG=en_US.UTF-8 \
+    LANGUAGE=en_US.UTF-8 \
+    PROGRAM=${PROGRAM} \
+    IB_RELEASE=${RELEASE} \
+    IBC_PATH=/opt/ibc \
+    IBC_INI=/opt/ibc/ibc.ini \
+    ARCH=${ARCH}
 
-ENV IBC_PATH=/opt/ibc
-ENV IBC_INI=${IBC_PATH}/ibc.ini
+# Copy installation script first (changes less frequently)
+COPY install.sh /install.sh
 
-ENV SCRIPT_PATH=/scripts
+# Install system dependencies and IB software
+RUN chmod +x /install.sh && \
+    /install.sh && \
+    # Clean up installation script
+    rm -f /install.sh && \
+    # Create flag file for settings initialization
+    touch /init_container_vars
 
-# this will get moved depending on PROGRAM argument
-COPY jts.ini /jts.ini
-COPY setup.sh /setup.sh
+# Create non-root user for security
+RUN groupadd -r ibuser && \
+    useradd -r -g ibuser -s /bin/bash ibuser && \
+    mkdir -p /home/ibuser
 
-RUN chmod +x /setup.sh && /setup.sh
-# Add a few variables to ensure memory management in a container works
-# Force anti-aliasing to LCD as JRE relies on xsettings, which are
-# not present inside the container.
-#echo " \n\
-# Force LCD anti-aliasing \n\
-#-Dawt.useSystemAAFontSettings=lcd \n\
-# Respect container memory limits \n\
-#-XX:+UnlockExperimentalVMOptions \n\
-#-XX:+UseCGroupMemoryLimitForHeap \n\
-#" >> ${IB_RELEASE_DIR}/${PROGRAM}.vmoptions
+# Copy configuration files
+COPY config/jts.ini /jts.ini
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY config/ibc.ini ${IBC_INI}
 
-# Bundle the Google Noto Sans Mono Medium font
-# https://www.google.com/get/noto/
-# SIL Open Font License, Version 1.1
+# Copy and set up program scripts
+COPY programs/common.sh /common.sh
+COPY programs/init_container_settings.py /usr/local/bin/init_container_settings
+COPY programs/start_xvfb.sh /usr/local/bin/start_xvfb
+COPY programs/start_vnc.sh /usr/local/bin/start_vnc
+COPY programs/start_ibc.sh /usr/local/bin/start_ibc
 
-# create a file to signal that the env vars need to be set.
-RUN touch /process_env_vars
+# Make all scripts executable
+RUN chmod +x /usr/local/bin/{init_container_settings,start_ibc,start_vnc,start_xvfb}
 
-# Bundle the Google Noto Sans Mono Medium font
-# https://www.google.com/get/noto/
-# SIL Open Font License, Version 1.1
-#COPY fonts/* /.fonts/
-#RUN fc-cache
+# Set permissions for non-root user
+RUN chown -R ibuser:ibuser /home/ibuser /opt/ibc /jts.ini
 
-COPY ibc.ini ${IBC_INI}
-COPY ibc_${PROGRAM}.sh /usr/local/bin/ibc_${PROGRAM}
-COPY ${PROGRAM}.sh /usr/local/bin/${PROGRAM}
-COPY common.sh $SCRIPT_PATH/common.sh
-RUN /bin/bash -c "chmod +x /usr/local/bin/{ibc_${PROGRAM},${PROGRAM}}"
+# Switch to the non-root user
+USER ibuser
 
-CMD "ibc_${PROGRAM}"
+# Set working directory for the user
+WORKDIR /home/ibuser
+
+# Expose VNC port for remote access
+EXPOSE 5900
+
+# Improved health check that works with non-root user
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD pgrep -f supervisord >/dev/null 2>&1 || exit 1
+
+# Run supervisord in foreground (non-daemon mode)
+CMD ["/usr/bin/supervisord", "-n"]
